--- a/module-box-1/package.json
+++ b/module-box-1/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "footer",
+	"name": "box-1",
 	"version": "1.0.0",
 	"description": "",
 	"main": "webpack.config.js",
@@ -12,8 +12,6 @@
 	"devDependencies": {
 		"css-loader": "^3.2.0",
 		"event-hooks-webpack-plugin": "2.1.4",
-		"html-webpack-inline-source-plugin": "0.0.10",
-		"html-webpack-plugin": "^3.2.0",
 		"mini-css-extract-plugin": "^0.8.0",
 		"postcss-loader": "^3.0.0",
 		"posthtml-loader": "^1.0.2",
