--- a/module-header/package.json
+++ b/module-header/package.json
@@ -10,12 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.7.3",
     "css-loader": "^3.2.0",
     "event-hooks-webpack-plugin": "2.1.4",
+    "extract-loader": "^3.1.0",
+    "file-loader": "^5.0.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
     "posthtml-loader": "^1.0.2",
     "posthtml-prefix-class": "^1.0.5",
+    "precss": "^4.0.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
