--- a/module-header/package.json
+++ b/module-header/package.json
@@ -20,6 +20,8 @@
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
     "posthtml-loader": "^1.0.2",
+    "posthtml-modules": "^0.4.2",
+    "posthtml-postcss-modules": "^0.1.7",
     "posthtml-prefix-class": "^1.0.5",
     "precss": "^4.0.0",
     "sass": "^1.23.7",
