--- a/module-header/package.json
+++ b/module-header/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "build": "webpack"
+    "build-dev": "webpack --mode=development",
+    "build-prod": "webpack --mode=production"
   },
   "keywords": [],
   "author": "",
